--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cinephile-content-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>BingeBook - Your Personal Movie & TV Show Tracker</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#1a1a2e">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="BingeBook">
+    <meta name="description" content="Track, organize, and discover your favorite movies and TV shows with BingeBook" />
+    <meta name="author" content="BingeBook" />
 
-    <meta property="og:title" content="cinephile-content-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="BingeBook - Your Personal Movie & TV Show Tracker" />
+    <meta property="og:description" content="Track, organize, and discover your favorite movies and TV shows with BingeBook" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
