--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#1a1a2e">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="BingeBook">
     <meta name="description" content="Track, organize, and discover your favorite movies and TV shows with BingeBook" />
